buurtboer-webapp/src/Views/Stylesheets/GeneralStyles.module.css
  .title{
    font-size: 25px;
    text-align: center;
  }

  .container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    scale: 1.8;
  }

  .register_container{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
  }

  .login_div{
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    padding: 10px 40px 10px 40px;
    background-color: #fff;
  }

  .image_div{
    padding: 0 !important;
  }

  .Buurtboerlogo {
    background-color: #099f91; 
    border-radius: 10px;
    padding: 10px 30px 10px 30px;
    scale: 1.010;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
  }

  .register_Buurtboerlogo{
    background-color: #099f91; 
    border-radius: 10px;
    padding: 10px 30px 10px 30px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
    width: 100%;
  }

  .submmitbutton{
    width: 100%;
    margin-bottom: 5px;
    margin-top: 5px;
    background-color: #F9834C;
    color: white;
    border-radius: 10px;
    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
    border: none;
    padding: 5px 10px;
  }

  .submmitbutton:hover{
    background-color: #F9934C;
  }

  .button{
    width: 100%;
    margin-bottom: 5px;
    margin-top: 5px;
    background-color: #F9834C;
    color: white;
    border-radius: 10px;
    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
    border: none;
    font-size: smaller;
  }

  .button:hover{
    background-color: #F9934C;
  }
  
  .button:active{
    background-color: #c95f3f;
  }

  .link_button{
    color: #099f91;
    text-decoration: none;
  }

  .nav_link_button{
    color: black;
    text-decoration: none;
  }

  .link_button:hover, .nav_link_button:hover{
    color: #c95f3f;
    text-decoration: underline;
  }

  .link {
    font-size: 10px;
    text-align: right;
    color: #099f91;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  .flag-icon {
    width: 20px; /* Adjust the width as needed */
    height: auto; /* Maintain aspect ratio */
    margin-right: 5px; /* Add some spacing between the images if needed */
  }

